Fix partial url lookup. Thanks to Achim Spangler for the patch!

BUG: 140161